test/tests/compiler/16_characters_and_strings/invalid_types/compound_initializer_for_pointer.plx
#  You can't initialize a pointer with a compound initializer 
pub fn main(none) i32 {
    ptr: *char = $('a', 'b', 'c')
    return nil
}
